# windeval

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint.yaml  test.yaml
doc/: conf.py  index.rst
doc/_source/: analysis.rst  importer.rst  introduction.rst  modules.rst  processing.rst  toolbox.rst  wrapper.rst
doc/_static/: .gitignore
docs/: conf.py  index.rst
docs/_source/: introduction.rst
docs/_templates/: .gitignore
src/windeval/: __init__.py  plotting.py  processing.py
src/windeval/io/: api.py  products.py  reports.py
tests/: conftest.py  test_plotting.py  test_processing.py
tests/io/: test_products.py  test_reports.py
windeval/: __init__.py  plotting.py  processing.py  toolbox.py  wrapper.py
windeval/example_data/TAO_moored_buoy_data/high_resolution/cdf/hr/: w12s67e_hr.cdf  w2n110w_hr.cdf  w5n125w_hr.cdf
windeval/io/: api.py  products.py  reports.py
windeval/tests/: conftest.py  test_plotting.py  test_processing.py  test_representations.py  test_toolbox.py  test_wrapper.py
windeval/tests/io/: test_products.py  test_reports.py
windeval/tests/test_data/TAO_moored_buoy_data/high_resolution/cdf/hr/: w0n125w_hr.cdf  w0n158e_hr.cdf  w10s10w_hr.cdf  w2n95w_hr.cdf  w2s170w_hr.cdf  w5n165e_hr.cdf
