[tool.poetry]
name = "windeval"
version = "0.1.0"
description = ""
authors = ["windeval developers <windeval@googlegroups.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4.1"
pandas = "^1.0.3"
xarray = "^0.15.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "19.3b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
mypy = "^0.770"
pre-commit = "^2.2.0"
sphinx = "^3.0.0"
numpydoc = "^0.9.2"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"
jupyterlab = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
atomic = true
line_length = 88  # to comply with Black
filter_files = true
multi_line_output = 3  # to comply with Black
use_parentheses = true
lines_after_imports = 2
lines_between_types = 1
not_skip = "__init__.py"
include_trailing_comma = true
